--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/ems_spring_basic?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root123456
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibarnate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.port=3001
